[tool.poetry]
name = "retinex"
version = "0.1.0"
description = ""
authors = ["Yuma Kinoshita <ykinoshita@tmu.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
